kubernetes/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: spring
  labels:
    app: db
spec:
    replicas: 1
    selector:
        matchLabels:
            app: db
    template:
        metadata:
            labels:
                app: db
        spec:
            containers:
                - name: mysql
                  image: mysql:latest
                  ports:
                      - containerPort: 3306
            #       volumeMounts:
            #           - name: mysql-data
            #             mountPath: /var/lib/mysql
            # volumes:
            #     - name: mysql-data
            #       persistentVolumeClaim:
            #           claimName: mysql-pvc
