kubernetes/spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: spring
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
